# discord-bot-takopy

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
discord_bot_takopy/: main.py
