[tool.poetry]
name = "discord-bot-takopy"
version = "0.1.0"
description = ""
authors = ["kaseitako <19668528+kaseitako@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
nextcord = ">=3.0.1,<4.0.0"
python-dotenv = ">=1.1.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
isort = ">=6.0.1,<7.0.0"
pylint = ">=3.3.6,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
